# nomon

./: .editorconfig  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
docs/: CAMERA_DISCOVERY.md  PHASE2_COMMUNICATION.md  SETUP.md  architecture.md  hat_ipc_schema.md  hat_python_client.md  microcontroller_setup.md  nomon_hat_crate.md  nomopractic_crate.md  phase2_completion.md  phase3_completion.md  phase4_completion.md  phase5_planning.md  roadmap.md
docs/adr/: 002-fastapi-for-rest-api.md  003-mjpeg-streaming.md  004-conditional-imports.md  005-paho-mqtt-for-telemetry.md  006-rust-hat-drivers-separate-repo.md  007-aws-iot-jobs-for-ota.md
examples/: api_server.py
src/nomon/: __init__.py  api.py  camera.py  client.py  protocol.py  server.py  streaming.py  updater.py
src/nomothetic/: __init__.py  api.py  streaming.py  telemetry.py
tests/: __init__.py  test_api.py  test_camera.py  test_communication.py  test_protocol.py  test_streaming.py  test_telemetry.py  test_updater.py
