[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomothetic"
version = "0.1.0"
description = "Comms & telemetry for the nomon fleet."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Perceptua", email = "perceptua.blue@gmail.com"}
]
keywords = ["raspberry-pi", "iot", "gpio", "hat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
dependencies = [
    "gpiozero>=2.0",
    "pigpio>=1.78",
    "smbus2>=0.4.1",
    "pyserial>=3.5",
    "spidev>=3.5; sys_platform == 'linux'",
    "picamera2>=0.3.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-pyserial>=3.5.0.11",
    "paho-mqtt>=2.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
web = [
    "flask>=2.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",
    "cryptography>=41.0",
    "python-dotenv>=1.0",
    "pydantic>=2",
]
telemetry = [
    "paho-mqtt>=2.0",
]

[project.urls]
Homepage = "https://github.com/Perceptua/nomothetic"
Documentation = "https://github.com/Perceptua/nomothetic"
Repository = "https://github.com/Perceptua/nomothetic.git"
Issues = "https://github.com/Perceptua/nomothetic/issues"

[tool.setuptools]
packages = ["nomothetic"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["nomothetic"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
